# encrypted-traffic-analyzer

./: .gitattributes  .gitignore  LICENSE  README.md  check_db.py  debug_ingest.py  fix_db_formats.py  fix_findings.py  init_db.py  live_analyze.py  live_capture_pipeline.py  live_dashboard.py  live_flow_aggregator.py  live_scorer.py  migrate_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulate_attack.py  step1_extract_tcp_flows.py  step2_label_flows.py  step3_train_model.py  step4_score_flows.py
configs/: config.yaml  default.yaml
data/: spectra.db
data/processed/: labeled_flows.csv  scored_flows.csv  tcp_flows.csv  tcp_flows_test.csv
data/threat_intel/: ip_reputation.json  ja3_benign.json  ja3_malicious.json
docs/: architecture.md  dataset_notes.md  experiment_results.md  project_architecture_v1.md  threat_model.md
models/: isolation_forest.joblib  scaler.joblib
models/ml/: isolation_forest.joblib
scripts/: diagnose_pipeline.py  diagnose_tls.py  inspect_packets.py  retrain_model.py  seed_threat_intel.py  test_capture.py  test_live_capture.py  verify_day1.py  verify_day10.py  verify_day11.py  verify_day12.py  verify_day13.py  verify_day2.py  verify_day3.py  verify_day4.py  verify_day5.py  verify_day6.py  verify_day7.py  verify_day8.py  verify_day9.py
src/api/: dependencies.py  main.py
src/dashboard/: api_client.py  app.py  state.py
src/extraction/: certificate_parser.py  ja3_computer.py  metadata_assembler.py  tls_parser.py
src/features/: certificate_features.py  feature_validator.py  flow_features.py  schema.py  tls_features.py
(+52 files in other folders)
